buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath 'org.owasp:dependency-check-gradle:6.3.2'
    }
}

plugins {
    id "org.sonarqube" version "3.3"
    id 'org.owasp.dependencycheck' version '6.3.2'
    id 'org.springframework.boot' version '2.5.6'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id "io.swagger.core.v3.swagger-gradle-plugin" version "2.1.11"
    id 'java'
}

apply plugin: 'jacoco'

group = 'com.revealprecision'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator:2.5.6'
    implementation 'org.springframework.batch:spring-batch-core:4.3.4'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.6'
    implementation 'com.cosium.spring.data:spring-data-jpa-entity-graph:2.4.1'
    implementation('org.springframework.boot:spring-boot-starter-web:2.5.6') {
        exclude module: 'spring-boot-starter-tomcat'
    }
    implementation 'org.springframework.boot:spring-boot-starter-undertow:2.5.6'
    implementation 'org.springframework.kafka:spring-kafka:2.7.6'
    implementation group: 'org.apache.kafka', name: 'kafka-clients', version: '2.8.1'
    implementation 'org.hibernate:hibernate-java8:5.6.1.Final'
    implementation 'org.hibernate:hibernate-envers:5.6.1.Final'
    implementation 'org.hibernate:hibernate-core:5.6.1.Final'
    implementation 'org.flywaydb:flyway-core:8.0.2'
    implementation('org.springdoc:springdoc-openapi-ui:1.5.12')
    implementation 'org.springframework.boot:spring-boot-starter-security:2.5.6'
    implementation 'org.projectlombok:lombok:1.18.16'
    runtimeOnly 'org.postgresql:postgresql:42.3.1'
    implementation 'org.keycloak:keycloak-spring-boot-starter:15.0.2'
    implementation 'org.keycloak.bom:keycloak-adapter-bom:15.0.2'
    implementation 'org.keycloak:keycloak-admin-client:16.0.0'
    implementation 'org.jboss.resteasy:resteasy-client:5.0.1.Final'
    implementation 'org.jboss.resteasy:resteasy-jaxb-provider:5.0.1.Final'
    implementation 'org.apache.commons:commons-collections4:4.4'
    implementation 'org.json:json:20211205'
    implementation 'com.vladmihalcea:hibernate-types-52:2.14.0'
    compileOnly 'org.projectlombok:lombok:1.18.22'
    annotationProcessor 'org.projectlombok:lombok:1.18.22'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.jobrunr:jobrunr-spring-boot-starter:4.0.3'

    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.6'
    testImplementation 'org.springframework.batch:spring-batch-test:4.3.3'
    testImplementation 'org.springframework.kafka:spring-kafka-test:2.7.6'
}

test {
    useJUnitPlatform()
}

sonarqube {
    properties {
        property "sonar.sourceEncoding", "UTF-8"
    }
}

jacoco {
    toolVersion = "0.8.7"
}